css: add padding to anchors so that they are jumped to correctly

--- a/css/cse495.css
+++ b/css/cse495.css
@@ -3,4 +3,6 @@
 	color: #ffffff;
 }
 
-body { padding-top: 70px; }
+body { padding-top: 60px; }
+
+body h1 { padding-top: 60px; margin-top: -60px; }
